# vt

./: README  install.sh  notes.txt  setup-vt.sh
etc/: clusters_file.cols  galaxies_file.cols  members_file.cols  pipeline.ini  setup-git.sh  setup-python.sh
example/: boxes.info  example_truthtable.fit  mfit_params.txt  params.info
python/: pipecheck.py
python/memb-assign/: README  afterburner.py  afterburner_zbin.py  gmmsetups.sh
run/: prep-vt-jobs  setup-grid-proxy.sh  setup-mysql.sh  setup-vt.sh
src/: cleancat.sh  dumpfits.c  findclusters.sh  get_boundaries.sh  liststruc.c  makefile  match_clusters.c  matchscript.sh  nr.c  nr.h  nrutil.c  nrutil.h  rankclusters.sh  tabmerge.c  voronoi.c  voronoi.h  vt.c  vtfind  zbins.cpp
utils/athena_1.7/: CMakeLists.txt  ChangeLog  config_woftheta  log
utils/athena_1.7/cmake/Modules/: FindCFITSIO.cmake
utils/athena_1.7/doc/: readme_1.7
utils/athena_1.7/src/: 2pcf.c  2pcf.h  CMakeLists.txt  Makefile  Makefile.athena  Makefile1  NJ.c  README.venice  bckw_eng_random.c  config.c  config.h  errorlist.c  errorlist.h  gal_cat.c  gal_cat.h  io.c  io.h  kdtree.c  kdtree.h  main.c  main.h  mathstuff.c  mathstuff.h  nrcomplex.c  nrcomplex.h  stdnames.h  venice.c  venice.h
utils/athena_1.7/test/test_g/: config_fits  config_tree
utils/athena_1.7/test/test_g/results/: INFO.txt  wgl  wgl.fits  wgl.resample
utils/athena_1.7/test/test_w/results/: INFO.txt
utils/athena_1.7/test/test_xi/: config_fits  config_tree
utils/athena_1.7/test/test_xi/results/: INFO.txt  log_pallas.py  xi  xi.fits  xi.fits_map2_gauss.fits  xi.fits_map2_poly.fits  xi.fits_pkappa_band.fits  xi.resample  xi.resample.cov  xi_map2_poly.txt  xi_pkappa_band.txt
utils/cfitsio/: eval_l.c  g77  imcopynull.c  imlist.c  imsection.c
utils/funtools/: Makefile.in  README  calc.l  conf.h  configure  configure.ac  funcalc.c  funcen.c  funcnts_plot.tmpl  funcone.c  fundisp.c  funhist_plot.tmpl  funim.c  funindex.tmpl  funjoin.c  funopenp.c  funsky.c  funtab.c  funtable.c  funtext.c  funtools.h  funtoolsP.h  funtools_ds9.tmpl  lex.calc.c  mklib  ofuntools.h  (+1 more)
(+135 files in other folders)
